--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/openai": "^0.0.18",
+    "@langchain/pinecone": "^0.0.3",
+    "@pinecone-database/pinecone": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "langchain": "^0.1.25",
+    "next": "14.1.3",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "tsc": "^2.0.4",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
