--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@adobe/pdfservices-node-sdk": "^3.4.2",
     "@langchain/openai": "^0.0.18",
     "@langchain/pinecone": "^0.0.3",
     "@pinecone-database/pinecone": "^2.1.0",
@@ -16,6 +17,7 @@
     "langchain": "^0.1.25",
     "next": "14.1.3",
     "pdf-parse": "^1.1.1",
+    "pdfreader": "^3.0.2",
     "react": "^18",
     "react-dom": "^18",
     "tsc": "^2.0.4",
